# SnowFall2

./: .gitignore  README.md  SnowFall_Specification.md  SnowFallプロンプト.md  SnowFallプロンプト.txt  SnowsFall2.code-workspace  package-lock.json  package.json  tsconfig.json
.github/workflows/: auto_release.yml  notify-showcase.yml
dev/: build.mjs
pkg/: snowfall_core.d.ts  snowfall_core.js  snowfall_core_bg.wasm  snowfall_core_bg.wasm.d.ts
src/: compiler.ts  decorators.ts  errors.ts  snowfall.ts  version.ts
src/common/: SnowFallError.ts  types.ts
src/const/: types.ts
src/libs/: Logger.ts  version_check.ts
src/libs/lzbase62/src/: compressor.ts  config.ts  decompressor.ts  index.ts  util.ts
test/: codegen.test.js  index.html  lexer.test.js  main.js  parser.test.js  test.js  verifier.test.js
test/node/: 001_lexer.test.ts  002_parser.test.ts  003_normalizer.test.ts  005_error.test.ts  codegen.test.js  compiler.test.js  core.test.js  lexer.test.js  parser.test.js  verifier.test.js
test/node/lib/: getWasm.ts
tmp/src/: lib.rs  token.rs  utils.rs
tmp/src/compiler/: ast.rs  lexer.rs  parser.rs
wasm/: Cargo.toml  build.rs
wasm/.cargo/: config.toml
wasm/src/: lib.rs  types.rs
wasm/src/common/: constants.rs  error.rs  error_code.rs  macros.rs  mod.rs  object.rs  operator.rs  sir.rs  span.rs  token.rs
wasm/src/compiler/: ast.rs  codegen.rs  lexer.rs  mod.rs  normalizer.rs  parser.rs  validator.rs
wasm/src/runtime/: mod.rs  ops.rs
wasm/srcs/compiler/: validator.rs
