[package]
name = "snowfall_core"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lazy_static = "1.4"
# エラーハンドリング用
thiserror = "2.0.17"
console_error_panic_hook = "0.1.7"
parking_lot = "0.12.5"
js-sys = "0.3.83"
cfg-if = "1.0.4"
serde-wasm-bindgen = "0.6.5"
