[package]
name = "snowfall_core"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"                                    # WebAssembly バインディング用(必須)
serde = { version = "1.0", features = ["derive"] }      # シリアライズ/デシリアライズ用(必須)
serde-wasm-bindgen = "0.6.5"                            # Serde と wasm-bindgen の連携
thiserror = "2.0.17"                                    # エラーハンドリング用
console_error_panic_hook = "0.1.7"                      # デバッグ用
ahash = { version = "0.8", features = ["serde"] }       # 高速ハッシュマップ
getrandom = { version = "0.3", features = ["wasm_js"] }
parking_lot = "0.12.5"                                  # 高速 Mutex / RwLock

[build-dependencies]
serde_json = "1.0" # package.json読み込み用
